work on SF- 1515090 (Redesign webmill portal for exclude external config files )